syntax = "proto3";

option java_multiple_files = true;

package org.samak.banana.dto.message;

import "model.proto";

message ClawMachineEvent {
  oneof event {
    CurrentStateClawMachineEvent currentStateClawMachineEvent = 1;
    CreatedClawMachineEvent createClawMachineEvent = 2;
    UpdatedClawMachineEvent updatedClawMachineEvent = 3;
    DeletedClawMachineEvent deletedClawMachineEvent = 4;
  }
}

message CurrentStateClawMachineEvent {
  repeated org.samak.banana.dto.model.ClawMachine clawMachines = 1;
}

message CreatedClawMachineEvent {
  org.samak.banana.dto.model.ClawMachine clawMachine = 1;
}

message UpdatedClawMachineEvent {
  org.samak.banana.dto.model.ClawMachine clawMachine = 1;
}

message DeletedClawMachineEvent {
  string clawMachineId = 1;
}

message PlushEvent {
  oneof event {
    CurrentStatePlushEvent currentStatePlushEvent = 1;
    CreatedPlushEvent createPlushEvent = 2;
    UpdatedPlushEvent updatedPlushEvent = 3;
    DeletedPlushEvent deletedPlushEvent = 4;
  }
}

message CurrentStatePlushEvent {
  repeated org.samak.banana.dto.model.Plush plushes = 1;
}

message CreatedPlushEvent {
  org.samak.banana.dto.model.Plush plush = 1;
}

message UpdatedPlushEvent {
  org.samak.banana.dto.model.Plush plush = 1;
}

message DeletedPlushEvent {
  string plushId = 1;
}