syntax = "proto3";

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

package org.samak.banana.dto.model;

message ClawMachine {
  optional string id = 1; // UUID format
  string name = 2;
  optional int32 order = 3;
}

message ClawMachineIdentifier {
  string id = 1;
}

message ClawMachineIdentifiers {
  repeated string ids = 1;
}

message ClawMachineUpdater {
  optional string name = 1;
  optional int32 order = 2;
}

enum PlushState {
  FREE = 0;
  TAKEN = 1;
}

message Plush {
  optional string id = 1;
  string name = 2;
  optional string imageAbsolutePath = 3;
  optional int32 order = 4;
  PlushState state = 5;
  optional PlushLocker plushLocker = 6;
}

message PlushUpdater {
  optional string name = 1;
  optional int32 order = 2;
}

message PlushLocker {
  string name = 1;
  google.protobuf.Timestamp since = 2;
}

message PlushUnLocker {
  string name = 1;
}

message PlushIdentifier {
  string id = 1;
}

message Plushes {
  repeated Plush plush = 1;
}